# raytracer

./: CMakeLists.txt
apps/: CMakeLists.txt  app.cu
include/geometry/: generator.cuh
include/physics/: particle.cuh  physics.cuh
include/raytracer/: pathtracer.cuh  raytracer.cuh  renderer.cuh
include/raytracer/bvh/: bvh.cuh
include/raytracer/linalg/: Matrix3f.cuh  Vector2f.cuh  Vector3f.cuh  Vector3i.cuh
include/raytracer/scene/: bbox.cuh  bsdf.cuh  camera.cuh  lights.cuh  primitives.cuh  ray.cuh
include/raytracer/util/: bitmap_image.cuh  image.cuh  misc.cuh  sampler.cuh
objects/: sportsCar.mtl
